--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ classifiers = [
 python = "^3.6"
 aiohttp = "^3.6.2"
 marshmallow = "^3.2.2"
+ujson = "^1.35"
 
 [build-system]
 requires = ["poetry>=0.12"]
