--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,16 @@ marshmallow = "^3.2.2"
 ujson = "^1.35"
 pytz = "^2019.3"
 
+[tool.poetry.dev-dependencies]
+twine = "^1.13"
+sphinx = "^2.1.1"
+pytest = "^4.4.0"
+pytest-cov = "^2.7.1"
+autoflake = "^1.3"
+codecov = "^2.0.15"
+docutils = { version = "0.15" }
+black = { version = "^19.3b0", allows-prereleases = true }
+
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
