--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,11 @@
 [tool.poetry]
-name = "snowstorm"
+name = "snow"
 version = "0.0.1"
 description = "ServiceNow library and UI"
 authors = ["Robert Wikman <rbw@vault13.org>"]
 license = "MIT"
 readme = "README.md"
-homepage = "https://github.com/rbw/snowstorm"
+homepage = "https://github.com/rbw/snow"
 classifiers = [
     "Development Status :: 2 - Pre-Alpha",
     "Environment :: Web Environment",
@@ -19,7 +19,16 @@ python = "^3.7"
 aiohttp = "^3.6.2"
 marshmallow = "^3.2.2"
 ujson = "^1.35"
-pytz = "^2019.3"
+
+[tool.poetry.dev-dependencies]
+twine = "^1.13"
+sphinx = "^2.1.1"
+pytest = "^4.4.0"
+pytest-cov = "^2.7.1"
+autoflake = "^1.3"
+codecov = "^2.0.15"
+docutils = { version = "0.15" }
+black = { version = "^19.3b0", allows-prereleases = true }
 
 [build-system]
 requires = ["poetry>=0.12"]
