--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -2,5 +2,5 @@ github:  # Replace with up to 4 GitHub Sponsors-enabled usernames e.g., [user1, 
 patreon: # Replace with a single Patreon username
 open_collective: # Replace with a single Open Collective username
 ko_fi: # Replace with a single Ko-fi username
-tidelift: pypi/snow # Replace with a single Tidelift platform-name/package-name e.g., npm/babel
+tidelift: # Replace with a single Tidelift platform-name/package-name e.g., npm/babel
 custom: https://paypal.vault13.org
