--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,6 @@ classifiers = [
 python = "^3.7"
 aiohttp = "^3.6.2"
 marshmallow = "^3.2.2"
-ujson = "^1.35"
 
 [tool.poetry.dev-dependencies]
 twine = "^1.13"
@@ -26,6 +25,8 @@ sphinx = "^2.1.1"
 sphinxcontrib-napoleon = "^0.7"
 pytest = "^4.4.0"
 pytest-cov = "^2.7.1"
+pytest-asyncio = "^0.10.0"
+pytest-aiohttp = "^0.3.0"
 autoflake = "^1.3"
 codecov = "^2.0.15"
 docutils = { version = "0.15" }
