--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,7 @@ license = "MIT"
 readme = "README.md"
 homepage = "https://github.com/rbw/snow"
 classifiers = [
-    "Development Status :: 2 - Pre-Alpha",
-    "Environment :: Web Environment",
+    "Development Status :: 3 - Alpha",
     "Operating System :: OS Independent",
     "Programming Language :: Python :: 3",
     "Topic :: Software Development :: Libraries"
