--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ before_install:
 install:
     - poetry install
 script:
-    - poetry run python -m pytest --cov=snow --cov=tests --ignore venv
+    - make lint
+    - make test
 after_success:
     - codecov
