--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "snow"
 version = "0.2.5"
-description = "Python library for ServiceNow"
+description = "Python asyncio library for ServiceNow"
 authors = ["Robert Wikman <rbw@vault13.org>"]
 license = "MIT"
 readme = "README.md"
@@ -20,6 +20,7 @@ marshmallow = "^3.2.2"
 
 [tool.poetry.dev-dependencies]
 twine = "^1.13"
+mypy = "^0.770"
 sphinx = "^2.1.1"
 sphinxcontrib-napoleon = "^0.7"
 pytest = "^4.4.0"
