Enable pytest coverage reports

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,6 +1,6 @@
 [pytest]
 testpaths = tests
-# addopts = --cov aiosnow
+addopts = --cov aiosnow
 log_level = DEBUG
 log_format = %(asctime)s %(name)s [%(filename)s:%(lineno)d] %(levelname)s: %(message)s
 log_date_format = %Y-%m-%d %H:%M:%S
